--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chartist-plugin-crosshairCursor",
   "description": "Crosshair cursor plugin for Chartist.js",
-  "version": "0.0.5",
+  "version": "2.0.0",
   "author": "Sroop Sunar",
   "homepage": "https://sroop.github.io/chartist-plugin-crosshairCursor",
   "repository": {
@@ -13,7 +13,8 @@
   },
   "keywords": [
     "chartist",
-    "plugin"
+    "plugin",
+    "crosshair"
   ],
   "files": [
     "dist",
